# Ut99py

./: .gitignore  README.md  pyproject.toml
ut99py/: __init__.py  __main__.py
ut99py/audio/: __init__.py
ut99py/core/: __init__.py  linkers.py  objects.py  system.py  types.py
ut99py/engine/: __init__.py  assets.py  mesh.py  texture.py  ut_reader.py
ut99py/graphics/: __init__.py  opengl.py
ut99py/ucc/: __init__.py
ut99py/window/: __init__.py
